--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "funding": {
     "type": "patreon",
     "url": "https://patreon.com/tycrek"
+  },
+  "dependencies": {
+    "fs-extra": "^10.0.0",
+    "postcss": "^8.3.6"
   }
 }
