--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "@tycrek/express-tailwind-jit",
+  "name": "@tycrek/express-postcss",
   "version": "0.0.0",
-  "description": "Express.js middleware for compiling TailwindCSS in Just-in-Time mode",
+  "description": "Express.js middleware for on-demand PostCSS compiling",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": "github:tycrek/express-tailwind-jit",
+  "repository": "github:tycrek/express-postcss",
   "keywords": [
     "express",
     "middleware",
-    "tailwind",
-    "tailwindcss",
+    "postcss",
     "css",
     "jit"
   ],
   "author": "tycrek <t@tycrek.com> (https://tycrek.com/)",
   "license": "ISC",
-  "bugs": "https://github.com/tycrek/express-tailwind-jit/issues",
-  "homepage": "https://github.com/tycrek/express-tailwind-jit#readme",
+  "bugs": "https://github.com/tycrek/express-postcss/issues",
+  "homepage": "https://github.com/tycrek/express-postcss#readme",
   "funding": {
     "type": "patreon",
     "url": "https://patreon.com/tycrek"
