--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "node-fetch": "^2.6.1",
     "pug": "^3.0.2",
     "tailwindcss": "^2.2.7"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
