--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "cd test && node test.js",
+    "build": "tsc",
     "release": "np"
   },
   "repository": "github:tycrek/express-postcss",
@@ -24,15 +25,19 @@
     "url": "https://patreon.com/tycrek"
   },
   "dependencies": {
+    "@tsconfig/node14": "^1.0.1",
     "fs-extra": "^10.0.0",
-    "postcss": "^8.3.6"
+    "postcss": "^8.3.6",
+    "typescript": "^4.5.4"
   },
   "devDependencies": {
-    "cssnano": "^5.0.8",
-    "express": "^4.17.1",
-    "node-fetch": "^2.6.1",
+    "@types/express": "^4.17.13",
+    "@types/fs-extra": "^9.0.13",
+    "cssnano": "^5.0.15",
+    "express": "^4.17.2",
+    "node-fetch": "^3.1.0",
     "pug": "^3.0.2",
-    "tailwindcss": "^2.2.7"
+    "tailwindcss": "^3.0.12"
   },
   "publishConfig": {
     "access": "public"
