Specify module type?? idk

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 	"extends": "@tsconfig/node16/tsconfig.json",
 	"compilerOptions": {
 		"outDir": "./dist",
+		"module": "commonjs",
 		"target": "ES2021",
 		"lib": [
 			"ES2021",
