--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.1",
   "description": "Express.js middleware for on-demand PostCSS compiling",
   "main": "./dist/index.js",
+  "type": "commonjs",
   "scripts": {
     "test": "cd test && node test.js",
     "build": "tsc",
